Added JShell VM options to run Apache Spark.
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/galyleo-kernel/trunk@7472 b3e4a033-f9ea-474d-ac63-5dcbede9114a